--- a/projetos.html
+++ b/projetos.html
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ONG">
     <meta name="keyword" content="ONG, Adoção">
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/projetos.css">
+    <link rel="stylesheet" href="css/reponsivo.css">
     <title>Projetos</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar"> <!--menu de barra de navegaçao-->
-            <div> <!--espaço separado para a logo-->
+            <div class="logo"> <!--espaço separado para a logo-->
                 <h1>ONG Doce Lar</h1>
             </div>
-            <div> <!--espaço separado para menu-->
+            <div class="menu"> <!--espaço separado para menu-->
                 <a href="index.html">HOME</a>
                 <a href="cadastro.html">Seja um Voluntário</a>
+                <a id="botao" href="#">Fale Conosco</a>
             </div>
         </nav>
     </header>
     <section>
-        <h2>-Conheça nossos Projetos-</h2>
-        <div>
-            <div>
-                <img style="width: 50%" src="img/mulher-com-cachorrro-header.jpg" alt="icone de missao">
+        <h2>- Conheça nossos Projetos -</h2>
+
+        <div class="container-grid">
+
+            <div class="card">
                 <h3>Lar Temporário</h3>
-                <p>O Lar Temporário é um programa de voluntariado que conecta pessoas dispostas a acolher
-                    temporariamente
-                    animais resgatados até que encontrem um lar definitivo. A ONG fornece ração, medicamentos e suporte
-                    veterinário, enquanto o voluntário oferece um ambiente seguro e amoroso.</p>
+                <p>Programa de voluntariado que conecta pessoas dispostas a acolher animais temporariamente até
+                    encontrarem um lar definitivo.</p>
             </div>
 
-            <div>
+            <div class="card">
                 <h3>Educação com Patas</h3>
-                <p>Voltado para escolas e comunidades, o Educação com Patas promove palestras e oficinas sobre respeito,
-                    empatia e bem-estar animal. Utiliza histórias reais e a presença de animais resgatados para inspirar
-                    crianças e adolescentes a se tornarem defensores da causa.</p>
+                <p>Projeto educativo que ensina empatia e respeito aos animais em escolas e comunidades.</p>
             </div>
-            <div>
+
+            <div class="card">
                 <h3>Adote com Amor</h3>
-                <p>Campanha permanente de adoção responsável realizada em feiras, eventos comunitários e redes sociais.
-                    A
-                    ONG realiza entrevistas e orienta os adotantes sobre guarda responsável, vacinação e castração.!</p>
+                <p>Campanha de adoção responsável com entrevistas e orientações sobre guarda responsável.</p>
             </div>
         </div>
     </section>
+
     <footer>
         <h2>ONG Doce Lar</h2>
         <b>© Todos os direitos reservados. Outubro, 2025.</b>
     </footer>
-    <a href="#"> <img src="img/whatsapp.png" alt="Chat Whatsapp">
+    <a class="whatsapp" target="_blank" href="#">
+        <img style="width: 70px;" src="img/whatsapp.png" alt="Chat Whatsapp">
     </a>
-</body>
 
 
 </html>
