--- a/index.html
+++ b/index.html
@@ -1,90 +1,15 @@
-</html>
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ONG">
-    <meta name="keyword" content="ONG, Adoção">
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/reponsivo.css">
-    <title>Minha Ong</title>
-</head>
-
-<body>
-    <nav class="navbar"> <!--menu de barra de navegaçao-->
-        <div class="logo"> <!--espaço separado para a logo-->
-            <h1>ONG Doce Lar</h1>
-        </div>
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="hamburguer">&#9776;</label>
-        <div class="menu"> <!--espaço separado para menu-->
-            <a href="index.html">HOME</a>
-            <a href="projetos.html">Projetos</a>
-            <div class="dropdown">
-                <a id="botao" href="#">Fale Conosco</a>
-                <div class="drop-menu">
-                    <a href="#">Email</a>
-                    <a href="#">Endereço</a>
-                    <a href="#">Telefone</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <header class="header">
-
-        <div class="headline">
-            <h2 style="letter-spacing: 15px;">Bem vindo a</h2>
-            <h2 style=" font-size: 80px;">ONG Doce Lar</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et minus ad possimus amet magni, iure,
-                aliquam minima, odit ea voluptatum neque dignissimos nobis quaerat blanditiis cupiditate quae optio
-                perferendis.
-            </p>
-            <div class="drop">
-                <a href="cadastro.html">Seja um Voluntário</a>
-            </div>
-
-        </div>
-        <div class="img-headline">
-            <img style="max-width: 98%;" src="img/voluntario-posando.jpg">
-        </div>
-
-    </header>
-    <section>
-        <h2>-O que nos move-</h2>
-        <div class="nos-move">
-            <div class="card">
-                <img src="img/missao.png" alt="icone de missao">
-                <h3>MISSÃO</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque blanditiis inventore voluptates
-                    dolorum facilis dolore repellendus. Ullam animi, neque nesciunt maxime mollitia vitae. Quas repellat
-                    consectetur qui praesentium cumque molestias!</p>
-            </div>
-
-            <div class="card">
-                <img style="height: 80px;" src="img/valores.png" alt="icone de missao">
-                <h3>VALORES</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam distinctio, minima, deserunt nobis
-                    facilis hic quae reprehenderit cupiditate tempore nisi velit commodi sunt. Quis ipsa ex doloremque
-                    ullam ducimus in!</p>
-            </div>
-            <div class="card">
-                <img src="img/vision.png" alt="icone de missao">
-                <h3>VISÃO</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem eum cupiditate natus veniam nobis,
-                    assumenda quasi necessitatibus dolorem similique. Tenetur et quisquam suscipit tempore quidem sint
-                    quibusdam enim esse praesentium!</p>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <h2>ONG Doce Lar</h2>
-        <b>© Todos os direitos reservados. Outubro, 2025.</b>
-    </footer>
-    <a class="whatsapp" target="_blank" href="#">
-        <img style="width: 70px;" src="img/whatsapp.png" alt="Chat Whatsapp">
-    </a>
-</body>
-
+<!doctype html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="ONG Doce Lar - Adoção de animais" />
+    <meta name="keyword" content="ONG, Adoção" />
+    <title>ONG Doce Lar</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
